--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -17,7 +17,7 @@
         android:ems="10"
         android:fontFamily="@font/roboto_light"
         android:gravity="center"
-        android:hint="@string/email_enter"
+        android:hint="@string/password_enter"
         android:inputType="textPersonName"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button2"
