--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -139,26 +139,6 @@
             app:layout_constraintVertical_bias="0.05"
             tools:ignore="TouchTargetSizeCheck" />
 
-        <EditText
-            android:id="@+id/editTextTextPersonName15"
-            android:layout_width="0dp"
-            android:layout_height="49dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginBottom="10dp"
-            android:background="#FFFFFF "
-            android:ems="10"
-            android:fontFamily="@font/roboto_light"
-            android:gravity="center"
-            android:hint="@string/role_enter"
-            android:inputType="textPersonName"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName14"
-            app:layout_constraintVertical_bias="0.069"
-            tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
             android:id="@+id/editTextTextPersonName16"
@@ -177,7 +157,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName15"
+            app:layout_constraintTop_toBottomOf="@+id/spinner"
             app:layout_constraintVertical_bias="0.084"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -201,6 +181,23 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName16"
             app:layout_constraintVertical_bias="0.111"
             tools:ignore="TouchTargetSizeCheck" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="361dp"
+            android:layout_height="49dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:spinnerMode="dropdown"
+            android:prompt="@string/hint_role"
+            android:textAlignment="center"
+            android:background="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName14"
+            app:layout_constraintVertical_bias="0.046"
+            tools:ignore="MissingConstraints" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
