--- a/app/src/main/res/layout/activity_adding_tab.xml
+++ b/app/src/main/res/layout/activity_adding_tab.xml
@@ -8,6 +8,20 @@
     tools:context=".AddingActivityTab">
 
     <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="@string/copyright"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.977" />
+
+    <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -31,19 +45,19 @@
         android:layout_height="49dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="10dp"
         android:background="#FFFFFF "
         android:ems="10"
         android:fontFamily="@font/roboto_light"
         android:gravity="center"
         android:hint="Activity Detail"
         android:inputType="textPersonName"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2"
-        app:layout_constraintVertical_bias="0.086"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.315"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
@@ -52,19 +66,18 @@
         android:layout_height="49dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="10dp"
         android:background="#FFFFFF "
         android:ems="10"
         android:fontFamily="@font/roboto_light"
         android:gravity="center"
-        android:hint="Start time(Hours and Minutes)"
+        android:hint="Start time (Hours and Minutes)"
         android:inputType="textPersonName"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activityDetail"
-        app:layout_constraintVertical_bias="0.11"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.422"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
@@ -73,19 +86,18 @@
         android:layout_height="49dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginBottom="10dp"
         android:background="#FFFFFF "
         android:ems="10"
         android:fontFamily="@font/roboto_light"
         android:gravity="center"
-        android:hint="End time(Hours and Minutes)"
+        android:hint="End time (Hours and Minutes)"
         android:inputType="textPersonName"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startTime"
-        app:layout_constraintVertical_bias="0.155"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.527"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
@@ -104,17 +116,24 @@
         app:layout_constraintTop_toBottomOf="@+id/endTime"
         app:layout_constraintVertical_bias="0.401" />
 
+
+
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/spinner"
+        android:layout_width="361dp"
+        android:layout_height="49dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:spinnerMode="dropdown"
+        android:prompt="@string/hint_role"
         android:textAlignment="center"
-        android:layout_width="359dp"
-        android:layout_height="55dp"
         android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.243"
-        android:spinnerMode="dropdown"/>
+        app:layout_constraintVertical_bias="0.21"
+        app:layout_constraintHorizontal_bias="0.48"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
