--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -18,7 +18,7 @@
         android:fontFamily="@font/roboto_light"
         android:gravity="center"
         android:hint="@string/password_enter"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
