--- a/app/src/main/res/layout/tasks.xml
+++ b/app/src/main/res/layout/tasks.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="20dp"
@@ -45,8 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="TextView"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
+        android:textColor="@color/black" />
 
     <Space
         android:layout_width="match_parent"
@@ -66,25 +66,27 @@
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="5dp"
-                android:layout_height="wrap_content"
+                android:layout_width="15dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="35dp"
                 android:layout_weight="1"
                 android:backgroundTint="#FF030B"
                 android:text="Delete"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/button6"
-                android:layout_width="5dp"
-                android:layout_height="wrap_content"
+                android:layout_width="15dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="105dp"
                 android:layout_marginRight="15dp"
                 android:layout_weight="1"
                 android:backgroundTint="#8BC34A"
                 android:text="Done"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
         <LinearLayout
