--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -152,7 +152,7 @@
             android:fontFamily="@font/roboto_light"
             android:gravity="center"
             android:hint="@string/pass_enter"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +173,7 @@
             android:fontFamily="@font/roboto_light"
             android:gravity="center"
             android:hint="@string/conf_pass_enter"
-            android:inputType="textPersonName"
+            android:inputType="textPassword"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
